# PromptABI

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml  tool_paper.tex
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  checker_proposal.yml  config.yml  corpus_fixture.yml  plugin_request.yml  prompt_pack_metadata.yml  provider_fixture.yml  training_adapter.yml  witness_minimization.yml
.github/workflows/: ci.yml  promptabi-training-data.yml  promptabi.yml  release.yml
benchmarks/: README.md  benchmark_smoke.py  scaled_eval_golden.json  scaled_eval_repro.py
docs/: air-gapped.md  architecture.md  award-submission.md  checks.md  corpus-refresh.md  formal-methods.md  formal_appendix.md  governance.md  historical-trends.md  index.md  integrations.md  localization.md  maintainer-health.md  public-api.md  quickstart.md  research-agenda.md  security-model.md  teaching-materials.md
docs/concepts/: artifact-model.md  formalism.md  grammar-emptiness.md  must-survive-budgets.md  proof-sketches.md  role-boundary-nonforgeability.md  static-contracts.md  stop-reachability.md  tokenizer-template-composition.md
docs/contributing/: checker-design.md  community-workflows.md  corpus-contributions.md  plugin-author-guide.md
editors/vscode/: README.md  extension.js  package.json
examples/agent-frameworks/: README.md  buggy.agent-prompt-pack.json  dynamic_support_agent.py  (+1 more)
fixtures/: README.md
launch_assets/: architecture.mmd  benchmark-data.json  bug-gallery.md  comparison.md  demo-script.md  launch-manifest.json  positioning.md
paper_artifact/: environment.json  expected_tables.json  fixture_hashes.json  manifest.json  reproduction_commands.sh
tests/: test_abstention_certificate.py  test_adoption_playbooks.py  test_adoption_tooling.py  test_adversarial_corpus.py  test_agent_framework_examples.py  test_air_gapped_docs.py  test_annual_provider_report.py  test_api_stability.py  test_artifact_bisection.py  test_artifact_provenance.py  test_artifact_reproducibility.py  test_artifacts.py  test_attestation_gate_composition.py  test_autofix.py  test_bench_suite.py  test_benchmark_leaderboards.py  test_benchmark_leakage.py  test_beta_program.py  test_bitvector_token_ids.py  test_bounded_array_contracts.py  test_bug_gallery.py  test_capability_negotiation.py  test_certified.py  test_chat_templates.py  test_checker_properties.py  test_ci_matrix.py  test_cli.py  test_community_outreach.py  test_comparative_studies.py  test_compatibility_audit.py  test_compatibility_matrix.py  test_compositional_proof_benchmarks.py  test_concept_docs.py  test_conference_demos.py  test_config.py  test_config_inheritance.py  test_conformance_issue_template.py  test_conformance_scale.py  test_context_window_semantics.py  test_contract_composition.py  (+194 more)
(+471 files in other folders)
