[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "promptabi"
version = "1.0.0"
description = "Static verification for tokenizer, template, tool-calling, and prompt-interface contracts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "PromptABI contributors" }]
keywords = ["llm", "tokenizer", "chat-template", "verification", "prompt-engineering"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
docs = ["mkdocs>=1.6"]
grammars = ["jsonschema>=4.20"]
solver = ["z3-solver>=4.12"]
tokenizers = ["sentencepiece>=0.2", "tiktoken>=0.7", "tokenizers>=0.15"]

[project.scripts]
promptabi = "promptabi.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
promptabi = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
